<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/banner" />

    <LinearLayout
        android:id="@+id/checkBoxContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bannerImage"
        android:orientation="vertical"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/checkBoxLoseThings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/lose_things" />

        <CheckBox
            android:id="@+id/checkBoxRememberNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/remember_names" />

        <CheckBox
            android:id="@+id/checkBoxLearnQuickly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/learn_quickly" />

        <CheckBox
            android:id="@+id/checkBoxTrackMultiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/keep_track_of_multiple_things" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBoxContainer"
        android:layout_centerHorizontal="true"
        android:text="@string/next" />

   </RelativeLayout>
