<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LujiaActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/brain_challenge"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#78909C"
        android:textSize="36sp"
        android:textStyle="bold" />

    <!-- Subtitle Text -->
    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_below="@id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/challenge_your_brain_with_scientifically_designed_exercises"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#546E7A"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonSelectExercises"
        android:layout_centerHorizontal="true"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:layout_below="@+id/imageLogo"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnselect"
        android:contentDescription="@string/select_exercises"
        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>
